N3 process push/email notification
